turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:4: error: '<-' expected but ')' found.
  for (i)
        ^LangtonsAnt:5: error: illegal start of simple expression
  }  
  ^LangtonsAnt:9: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:22: error: Unmatched closing brace '}' ignored here
}
^