turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
  var couleurSol=getCouleurSol()
  for (i)
  }  
}